--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   (function () {
       document.documentElement.classList.add("dark-mode");
 
-    // try {
-      // const isDark = localStorage.getItem("theme") === "dark";
-      // if (isDark) {
-      //   document.documentElement.classList.add("dark-mode");
-      // }
-    // } catch (e) { }
+    try {
+      const isDark = localStorage.getItem("theme") === "dark";
+      if (isDark) {
+        document.documentElement.classList.add("dark-mode");
+      }
+    } catch (e) { }
   })();
 </script>
 
@@ -42,7 +42,7 @@
           <li><a href="https://github.com/PiCake314/Pie" target="_blank">Download</a>
           </li>
           <li><a href="docs.html">Docs</a></li>
-          <!-- <li><i class="bi bi-moon toggle-desktop" id="toggleDark"></i></li> -->
+          <li><i class="bi bi-moon toggle-desktop" id="toggleDark"></i></li>
         </ul>
       </div>
     </nav>
