added another example

--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
           <label for="codeSelector">Choose example:</label>
           <select id="codeSelector" class="codeSelector">
             <option value="Hello-There">Hello World!</option>
-            <option value="Variables-and-Types">Variables and Types</option>
+            <option value="Variables-and-Types">Variables & Types</option>
             <option value="Functions">Functions</option>
             <option value="Control-Flow">Control Flow</option>
             <option value="Structs">Classes</option>
             <option value="Operators">Operators</option>
+            <option value="Overloading">Operator Overloading</option>
             <option value="Quirks">Quirks...</option>
           </select>
 
