fixed download link on docs page

--- a/docs.html
+++ b/docs.html
@@ -39,7 +39,7 @@
       <div class="nav-links" id="navLinks">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="https://github.com/PieCake314/Pie" target="_blank">Download</a>
+          <li><a href="https://github.com/PiCake314/Pie" target="_blank">Download</a>
           </li>
           <li><a href="docs.html">Docs</a></li>
           <li><i class="bi bi-moon toggle-desktop" id="toggleDark"></i></li>
